[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pnt-supervisor"
version = "0.1.0"
description = "Core data models and configuration for a PNT supervisor application"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PNT Supervisor" }]
dependencies = [
  "pydantic>=2.0",
  "PyQt6",
  "pandas",
  "openpyxl",
  "pynmea2",
  "numpy",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pnt_supervisor*"]
exclude = ["tests*", "configs*", "pydantic*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
